# saas-packages

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
saas_packages/: __init__.py  api.py  hooks.py  modules.txt  provision.py  utils.py
saas_packages/config/: desktop.py
saas_packages/fixtures/: initial_packages.json
saas_packages/public/js/: plans.js
saas_packages/saas_packages/doctype/customer_plan/: customer_plan.py
saas_packages/www/: plans.html
saas_packages_fixed/: .gitignore  README.md  pyproject.toml  setup.py
saas_packages_fixed/saas_packages/: api.py  hooks.py  provision.py  utils.py
saas_packages_fixed/saas_packages/fixtures/: initial_packages.json
saas_packages_fixed/saas_packages/public/js/: plans.js
saas_packages_fixed/saas_packages/saas_packages/doctype/customer_plan/: customer_plan.json
saas_packages_fixed/saas_packages/saas_packages/doctype/package/: package.py
saas_packages_fixed/saas_packages/saas_packages/doctype/package_doctype/: package_doctype.py
saas_packages_fixed/saas_packages/saas_packages/doctype/package_domain/: package_domain.json  package_domain.py
saas_packages_fixed/saas_packages/saas_packages/doctype/package_workspace/: package_workspace.py
saas_packages_fixed/saas_packages/saas_packages/doctype/plan_assignment/: plan_assignment.json  plan_assignment.py
saas_packages_fixed/saas_packages/saas_packages/doctype/saas_managed_role/: saas_managed_role.json  saas_managed_role.py
saas_packages_fixed/saas_packages/saas_packages/doctype/saas_settings/: saas_settings.py
(+6 files in other folders)
