[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saas_packages"
version = "0.1.4"
description = "ERPNext SaaS packages + provisioning"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Company", email = "dev@yourco.com" }]
license = { text = "MIT" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = false
