[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saas_packages"
version = "0.1.1"
description = "ERPNext SaaS packages + provisioning"
authors = [{name = "Your Company", email = "dev@yourco.com"}]
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["." ]
